# debkit

./: .gitignore  Cargo.toml  README.md
.githooks/: pre-commit
scripts/: bootstrap-rust.sh  build-package.sh  bump-patch-version.sh
src/: config.rs  main.rs
src/install/: apt.rs  codex.rs  essentials.rs  foundation.rs  git.rs  git_prompt.rs  list.rs  mod.rs  nis.rs  npm.rs  ripgrep.rs  rust.rs  sudo_nopass.rs  variety.rs  wake_on_lan.rs
src/package/: deb.rs
